# Realtime_PyAudio_FFT

./: .gitignore  CLAUDE.md  README.md  config.yaml  realtime_audio_server_plan.md
configs/: main.example.yaml  main.yaml
new/: CLAUDE.md  README.md  config.yaml  pyproject.toml  realtime_audio_server_plan.md
new/server/: config.py  main.py
new/server/audio/: stream.py
new/server/control/: dispatcher.py  validate.py
new/server/dsp/: fft.py  filters.py  worker.py
new/server/io/: http_server.py  osc_sender.py  ws_server.py
new/ui/: index.html  style.css
new/ui/src/: controls.js  main.js  store.js  ws.js
new/ui/src/viz/: fft_2d.js  lmh_scene.js
server/: config.py  main.py  priority.py
server/audio/: callback.py  devices.py  ringbuffer.py  stream.py
server/control/: dispatcher.py  validate.py
server/dsp/: _math.py  beat.py  features.py  fft.py  fft_postprocess.py  filters.py  onset.py  worker.py
server/io/: http_server.py  osc_publisher.py  osc_sender.py  stores.py  ws_server.py
ui/: index.html  style.css
ui/src/: colors.js  controls.js  freq_axis.js  layout.js  main.js  sidebar.js  store.js  tooltips.js  ws.js
ui/src/viz/: fft_2d.js  lmh_bars.js  lmh_lines.js  lmh_scene.js
